--- a/index.html
+++ b/index.html
@@ -57,85 +57,8 @@
         </div>
     </template>
 
-<!--     <script src="script.js"></script> -->
-    <script> const API_KEY = "9e68f01097c54fada3dd2884f2c3205f";
-const url = "https://newsapi.org/v2/everything?q=";
-
-window.addEventListener('load', () => fetchNews("AI"));
-
-function reload() {
-    window.location.reload();
-}
-
-async function fetchNews(query) {
-    const res = await fetch(`${url}${query}&apiKey=${API_KEY}`);
-    // Fetching the information from the server.
-
-    const data = await res.json();
-    console.log(data);
-    bindData(data.articles);
-}
-
-function bindData(articles) {
-    const cardsContainer = document.getElementById('cards-container');
-    const newsCardTemplate = document.getElementById('template-news-card');
-
-    cardsContainer.innerHTML = "";
-
-    articles.forEach(article => {
-        if (!article.urlToImage) return;
-        const cardClone = newsCardTemplate.content.cloneNode(true);
-        fillDataInCard(cardClone, article);
-        cardsContainer.appendChild(cardClone);
-    });
-}
-
-function fillDataInCard(cardClone, article) {
-    const newsImg = cardClone.querySelector("#news-img");
-    const newsTitle = cardClone.querySelector("#news-title");
-    const newsSource = cardClone.querySelector("#news-source");
-    const newsDesc = cardClone.querySelector("#news-desc");
-
-    newsImg.src = article.urlToImage;
-    newsTitle.innerHTML = article.title;
-    newsDesc.innerHTML = article.description;
-
-    const date = new Date(article.publishedAt).toLocaleString("en-US", {
-        timeZone: "Asia/Jakarta"
-    });
-
-    newsSource.innerHTML = `${article.source.name}· ${date}`;
-
-    cardClone.firstElementChild.addEventListener("click", () => {
-        window.open(article.url, "_blank");
-    });
-}
-
-let curSelectedNav = null;
-function onNavItemClick(id) {
-    fetchNews(id);
-    const navItem = document.getElementById(id);
-    curSelectedNav?.classList.remove('active');
-    curSelectedNav = navItem;
-    curSelectedNav.classList.add('active');
-}
-
-function search() {
-    const searchButton = document.getElementById("search-button");
-    const searchText = document.getElementById("search-text");
-    console.log(searchText);
-
-    searchButton.addEventListener('click', () => {
-        const query = searchText.value;
-        if (!query) return;
-        fetchNews(query);
-        curSelectedNav?.classList.remove('active');
-        curSelectedNav = null;
-    });
-
-}
-
- </script>
+    <script src="script.js"></script>
+    
 </body>
 
 </html>
